--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.919.0",
+    "@aws-sdk/s3-presigned-post": "^3.920.0",
     "aws-cdk-lib": "2.215.0",
     "constructs": "^10.0.0"
   }
