--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/s3-request-presigner": "^3.920.0",
     "aws-cdk-lib": "2.215.0",
     "constructs": "^10.0.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "sharp": "^0.34.4"
   }
 }
